; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/extr_yuv2rgb.c_sws_getCoefficients.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/extr_yuv2rgb.c_sws_getCoefficients.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWS_CS_DEFAULT = common dso_local global i32 0, align 4
@ff_yuv2rgb_coeffs = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @sws_getCoefficients(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sgt i32 %3, 10
  br i1 %4, label %11, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = icmp eq i32 %9, 8
  br i1 %10, label %11, label %13

11:                                               ; preds = %8, %5, %1
  %12 = load i32, i32* @SWS_CS_DEFAULT, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %8
  %14 = load i32**, i32*** @ff_yuv2rgb_coeffs, align 8
  %15 = load i32, i32* %2, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32*, i32** %14, i64 %16
  %18 = load i32*, i32** %17, align 8
  ret i32* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
